// SPDX-FileCopyrightText: 2024 Shun Sakai
//
// SPDX-License-Identifier: GPL-3.0-or-later

= Changelog
:toc: preamble
:project-url: https://github.com/sorairolake/favico
:compare-url: {project-url}/compare
:issue-url: {project-url}/issues
:pull-request-url: {project-url}/pull

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/[Keep a Changelog], and this
project adheres to https://semver.org/[Semantic Versioning].

== {compare-url}/v0.1.7\...v0.1.8[0.1.8] - 2024-10-29

=== Added

* Supports generating favicons from XBM ({pull-request-url}/191[#191])

== {compare-url}/v0.1.6\...v0.1.7[0.1.7] - 2024-09-22

=== Added

* Supports `oklab()` and `oklch()` for `--theme-color` and `--background-color`

== {compare-url}/v0.1.5\...v0.1.6[0.1.6] - 2024-08-04

=== Changed

* Update man pages ({pull-request-url}/143[#143])

== {compare-url}/v0.1.4\...v0.1.5[0.1.5] - 2024-07-03

=== Changed

* Change to use `Display` to display path ({pull-request-url}/106[#106])

== {compare-url}/v0.1.3\...v0.1.4[0.1.4] - 2024-04-23

=== Changed

* Allow input image formats other than PNG to be disabled
  ({pull-request-url}/38[#38])
* Re-enable BMP and ICO ({pull-request-url}/39[#39])

== {compare-url}/v0.1.2\...v0.1.3[0.1.3] - 2024-04-18

=== Changed

* Change to remove unnecessary files from the book
  ({pull-request-url}/32[#32])

== {compare-url}/v0.1.1\...v0.1.2[0.1.2] - 2024-04-16

=== Changed

* Update examples in man pages

== {compare-url}/v0.1.0\...v0.1.1[0.1.1] - 2024-04-08

=== Changed

* Add screenshot ({pull-request-url}/6[#6])

== {project-url}/releases/tag/v0.1.0[0.1.0] - 2024-03-26

=== Added

* Initial release