@@ -1,0 +1,9 @@
+# SPDX-FileCopyrightText: 2024 Shun Sakai
+#
+# SPDX-License-Identifier: GPL-3.0-or-later
+
+[tool.bumpversion]
+current_version = "0.1.8"
+
+[[tool.bumpversion.files]]
+filename = "docs/man/man1/favico.1.adoc"
