@@ -4,10 +4,10 @@
 
 = favico(1)
 // Specify in UTC.
-:docdate: 2024-10-29
+:docdate: 2025-01-07
+:revnumber: 0.1.8
 :doctype: manpage
-ifdef::revnumber[:mansource: favico {revnumber}]
-ifndef::revnumber[:mansource: favico]
+:mansource: favico {revnumber}
 :manmanual: General Commands Manual
 ifndef::site-gen-antora[:includedir: ./include]
 :enwp-url: https://en.wikipedia.org
@@ -19,42 +19,18 @@ ifndef::site-gen-antora[:includedir: ./include]
 :mdn-refs-url: {mdn-url}/en-US/docs/Web
 :web-app-manifest-url: {mdn-refs-url}/Manifest
 :pwa-url: {mdn-refs-url}/Progressive_web_apps
-ifdef::dds,env-github,site-gen-antora[]
 :dds-url: {enwp-article-url}/DirectDraw_Surface
-endif::[]
-ifdef::ff,env-github,site-gen-antora[]
 :farbfeld-url: https://tools.suckless.org/farbfeld/
-endif::[]
-ifdef::gif,env-github,site-gen-antora[]
 :gif-url: {enwp-article-url}/GIF
-endif::[]
-ifdef::hdr,env-github,site-gen-antora[]
 :radiance-rgbe-url: {enwp-article-url}/RGBE_image_format
-endif::[]
-ifdef::jpeg,env-github,site-gen-antora[]
 :jpeg-url: https://jpeg.org/jpeg/
-endif::[]
-ifdef::exr,env-github,site-gen-antora[]
 :openexr-url: https://openexr.com/
-endif::[]
-ifdef::pnm,env-github,site-gen-antora[]
 :pnm-url: https://netpbm.sourceforge.net/doc/pnm.html
-endif::[]
-ifdef::qoi,env-github,site-gen-antora[]
 :qoi-url: https://qoiformat.org/
-endif::[]
-ifdef::tga,env-github,site-gen-antora[]
 :tga-url: {enwp-article-url}/Truevision_TGA
-endif::[]
-ifdef::tiff,env-github,site-gen-antora[]
 :tiff-url: {enwp-article-url}/TIFF
-endif::[]
-ifdef::webp,env-github,site-gen-antora[]
 :webp-url: https://developers.google.com/speed/webp/
-endif::[]
-ifdef::xbm,env-github,site-gen-antora[]
 :xbm-url: {enwp-article-url}/X_BitMap
-endif::[]
 :image-crates-url: https://crates.io/crates/image
 :css-color-url: https://www.w3.org/TR/css-color-4/
 
@@ -142,44 +118,20 @@ The {css-color-url}[CSS color string] can be specified as a value for
 
 .Supported input image file formats
 * {bmp-url}[BMP]
-ifdef::dds,env-github,site-gen-antora[]
-* {dds-url}[DDS]
-endif::[]
-ifdef::ff,env-github,site-gen-antora[]
-* {farbfeld-url}[Farbfeld]
-endif::[]
-ifdef::gif,env-github,site-gen-antora[]
-* {gif-url}[GIF]
-endif::[]
-ifdef::hdr,env-github,site-gen-antora[]
-* {radiance-rgbe-url}[Radiance RGBE]
-endif::[]
+* {dds-url}[DDS] (if enabled at compile time)
+* {farbfeld-url}[Farbfeld] (if enabled at compile time)
+* {gif-url}[GIF] (if enabled at compile time)
+* {radiance-rgbe-url}[Radiance RGBE] (if enabled at compile time)
 * {ico-url}[ICO]
-ifdef::jpeg,env-github,site-gen-antora[]
-* {jpeg-url}[JPEG]
-endif::[]
-ifdef::exr,env-github,site-gen-antora[]
-* {openexr-url}[OpenEXR]
-endif::[]
+* {jpeg-url}[JPEG] (if enabled at compile time)
+* {openexr-url}[OpenEXR] (if enabled at compile time)
 * {png-url}[PNG]
-ifdef::pnm,env-github,site-gen-antora[]
-* {pnm-url}[PNM]
-endif::[]
-ifdef::qoi,env-github,site-gen-antora[]
-* {qoi-url}[QOI]
-endif::[]
-ifdef::tga,env-github,site-gen-antora[]
-* {tga-url}[TGA]
-endif::[]
-ifdef::tiff,env-github,site-gen-antora[]
-* {tiff-url}[TIFF]
-endif::[]
-ifdef::webp,env-github,site-gen-antora[]
-* {webp-url}[WebP]
-endif::[]
-ifdef::xbm,env-github,site-gen-antora[]
-* {xbm-url}[XBM]
-endif::[]
+* {pnm-url}[PNM] (if enabled at compile time)
+* {qoi-url}[QOI] (if enabled at compile time)
+* {tga-url}[TGA] (if enabled at compile time)
+* {tiff-url}[TIFF] (if enabled at compile time)
+* {webp-url}[WebP] (if enabled at compile time)
+* {xbm-url}[XBM] (if enabled at compile time)
 
 Use *-t* option to specify the image format. If this option is not specified,
 the image format is determined based on the extension or the magic number.
@@ -264,85 +216,73 @@ _IMAGE_::
 
       Windows Bitmap.
 
-ifdef::dds,env-github,site-gen-antora[]
     *dds*::::
 
-      DirectDraw Surface.
-endif::[]
+      DirectDraw Surface. This value is available if the `dds` feature is
+      enabled at compile time.
 
-ifdef::ff,env-github,site-gen-antora[]
     *farbfeld*::::
 
-      Farbfeld.
-endif::[]
+      Farbfeld. This value is available if the `ff` feature is enabled at
+      compile time.
 
-ifdef::gif,env-github,site-gen-antora[]
     *gif*::::
 
-      Graphics Interchange Format.
-endif::[]
+      Graphics Interchange Format. This value is available if the `gif` feature
+      is enabled at compile time.
 
-ifdef::hdr,env-github,site-gen-antora[]
     *hdr*::::
 
-      Radiance RGBE.
-endif::[]
+      Radiance RGBE. This value is available if the `hdr` feature is enabled at
+      compile time.
 
     *ico*::::
 
-      ICO file format. This value also includes the CUR file format.
+      ICO file format.
 
-ifdef::jpeg,env-github,site-gen-antora[]
     *jpeg*::::
 
-      JPEG.
-endif::[]
+      JPEG. This value is available if the `jpeg` feature is enabled at compile
+      time.
 
-ifdef::exr,env-github,site-gen-antora[]
     *openexr*::::
 
-      OpenEXR.
-endif::[]
+      OpenEXR. This value is available if the `exr` feature is enabled at
+      compile time.
 
     *png*::::
 
       Portable Network Graphics.
 
-ifdef::pnm,env-github,site-gen-antora[]
     *pnm*::::
 
-      Portable Anymap Format.
-endif::[]
+      Portable Anymap Format. This value is available if the `pnm` feature is
+      enabled at compile time.
 
-ifdef::qoi,env-github,site-gen-antora[]
     *qoi*::::
 
-      Quite OK Image Format.
-endif::[]
+      Quite OK Image Format. This value is available if the `qoi` feature is
+      enabled at compile time.
 
-ifdef::tga,env-github,site-gen-antora[]
     *tga*::::
 
-      Truevision TGA.
-endif::[]
+      Truevision TGA. This value is available if the `tga` feature is enabled
+      at compile time.
 
-ifdef::tiff,env-github,site-gen-antora[]
     *tiff*::::
 
-      Tag Image File Format.
-endif::[]
+      Tag Image File Format. This value is available if the `tiff` feature is
+      enabled at compile time.
 
-ifdef::webp,env-github,site-gen-antora[]
     *webp*::::
 
-      WebP.
-endif::[]
+      WebP. This value is available if the `webp` feature is enabled at compile
+      time.
 
-ifdef::xbm,env-github,site-gen-antora[]
     *xbm*::::
 
-      X BitMap.
-endif::[]
+      X BitMap. This value is available if the `xbm` feature is enabled at
+      compile time.
 
 *-h*, *--help*::
 
